modules/common/src/dateTime/dateTime.component.scss
.dateTimeItem {
  min-height: 48px;
  height: auto;
  .description {
    margin: 10px 0;
    height: 20px;
    line-height: 20px;
    width: 100%;
  }
  .placeholder {
    color: var(--ion-color-medium);
  }
  .selectIcon {
    margin: 0;
    padding-left: 4px;
    font-size: 0.8em;
    color: var(--ion-color-medium);
  }
}
.dateTimeItem.withLabel {
  min-height: 58px;
  height: auto;
  .selectIcon {
    padding-top: 25px;
  }
  ion-button[slot='start'] {
    margin-top: 16px;
  }
}
.selectable {
  cursor: pointer;
}

